<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert">Alert</string>
    <string name="alert_certainty">Certainty:</string>
    <string name="alert_description">Description:</string>
    <string name="alert_instruction">Instruction:</string>
    <string name="alert_sender">Sender:</string>
    <string name="alerts_title">Alert title</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animate_off_legend">Static</string>
    <string name="animate_on_legend">Animate</string>
    <string name="app_name">Weather</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="back_btn_txt">Back</string>
    <string name="backup_dialog_msg">Please manually enter a location</string>
    <string name="backup_dialog_title">GPS locate unsuccessful</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="celsius">Celsius</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cloud_cover">Cloud cover:</string>
    <string name="clouds">Clouds</string>
    <string name="copy">Copy</string>
    <string name="copyright">Copyright © 2022</string>
    <string name="daily_tab_title">Daily</string>
    <string name="dash">-</string>
    <string name="data_unavailable_txt">"Failed to load
Data unavailable"</string>
    <string name="default_hour">12 PM</string>
    <string name="default_precip">20%</string>
    <string name="default_temp">56ºF</string>
    <string name="default_temp_summary">TextView</string>
    <string name="device_initial_location">Fetching Location…</string>
    <string name="dew_point">Dew point:</string>
    <string name="droplet_image_desc">Droplet image</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_fetching_weather_data">Failed to retrieve the latest weather values!</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="feels_like">Feels like %1$s</string>
    <string name="feels_like_temp">Feels like:</string>
    <string name="first_run_current_location_btn">Current location</string>
    <string name="first_run_dialog_current_location_note">Current GPS location may take a few seconds</string>
    <string name="first_run_dialog_title">Select weather location</string>
    <string name="first_run_manual_location_btn">Set location</string>
    <string name="get_weather_text">Get Weather</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hourly_tab_title">Hourly</string>
    <string name="humidity">Humidity:</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="icon_for_daily_weather">Icon for daily weather</string>
    <string name="icon_for_hourly_weather">Icon for hourly weather</string>
    <string name="initial_weather_data">---</string>
    <string name="initial_weather_description">Loading weather info…</string>
    <string name="item_view_role_description">Tab</string>
    <string name="last_known_location">Using last known location</string>
    <string name="legend_precipitation_desc">Precipitation Legend</string>
    <string name="legend_title_precipitation">Precipitation</string>
    <string name="legend_unit">Unit: Inch</string>
    <string name="loading">Loading…</string>
    <string name="loading_image_desc">loading image</string>
    <string name="loading_txt">Loading…</string>
    <string name="loading_weather_data">"Loading weather information.

Please wait…"</string>
    <string name="locate_legend">Locate</string>
    <string name="locating">Locating…</string>
    <string name="location_not_accessible">Cannot retrieve location, please enable GPS/Internet to get updated weather data</string>
    <string name="location_permission_not_granted">Access Fine Location permission is not granted. Closing app!</string>
    <string name="location_update">Use current location</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="map_legend">Map Info</string>
    <string name="map_loading">Loading…</string>
    <string name="mapbox_attributionErrorNoBrowser">"No web browser installed on device, can't open web page."</string>
    <string name="mapbox_attributionTelemetryMessage">You are helping to make OpenStreetMap and Mapbox maps better by contributing anonymous usage data.</string>
    <string name="mapbox_attributionTelemetryNegative">Disagree</string>
    <string name="mapbox_attributionTelemetryNeutral">More info</string>
    <string name="mapbox_attributionTelemetryPositive">Agree</string>
    <string name="mapbox_attributionTelemetryTitle">Make Mapbox Maps Better</string>
    <string name="mapbox_attributionsDialogTitle">Powered by Mapbox Maps</string>
    <string name="mapbox_compassContentDescription">Map compass. Activate to reset the map rotation to North.</string>
    <string name="mapbox_myLocationViewContentDescription">Location View. This shows your location on the map.</string>
    <string name="mapbox_plugins_autocomplete_search_hint">Search here</string>
    <string name="mapbox_plugins_cd_exit_place_picker">Exit place picker</string>
    <string name="mapbox_plugins_cd_offline_icon">Offline icon</string>
    <string name="mapbox_plugins_cd_search_back_button">Close Search</string>
    <string name="mapbox_plugins_cd_search_clear_button">Clear Search Query</string>
    <string name="mapbox_plugins_offline_message">Offline - Try again</string>
    <string name="mapbox_plugins_place_picker_not_valid_selection">"The selected location isn't valid"</string>
    <string name="mapbox_plugins_place_picker_toolbar_primary_text">Choose location on map</string>
    <string name="mapbox_plugins_place_picker_toolbar_secondary_text">Pan and zoom to adjust</string>
    <string name="mapbox_plugins_place_picker_user_location_not_found">"Location can't be found."</string>
    <string name="mapbox_plugins_place_picker_user_location_permission_explanation">This app needs location permissions in order to find the device location.</string>
    <string name="mapbox_plugins_place_picker_user_location_permission_not_granted">Location permissions not granted.</string>
    <string name="mapbox_search_sdk_category_name_atm">ATM</string>
    <string name="mapbox_search_sdk_category_name_auto_repair_mechanic">Auto repair/mechanic</string>
    <string name="mapbox_search_sdk_category_name_bars">Bars</string>
    <string name="mapbox_search_sdk_category_name_bus_station">Bus station</string>
    <string name="mapbox_search_sdk_category_name_clothing_shoes">Clothing/shoes</string>
    <string name="mapbox_search_sdk_category_name_coffee_shop_cafe">Cafe</string>
    <string name="mapbox_search_sdk_category_name_emergency_room">ER</string>
    <string name="mapbox_search_sdk_no_internet_connection_retry_button">Tap to retry</string>
    <string name="mapbox_search_sdk_no_internet_connection_subtitle">You’re offline. Try to reconnect.</string>
    <string name="mapbox_search_sdk_no_internet_connection_title">No internet connection</string>
    <string name="search_new_location">Set location</string>
    <string name="shortcut_tip">"Tip:
Use number keys as shortcuts to select Tabs. For example, press 3 to select Daily Forecast."</string>
    <string name="uv_index">UV Index:</string>
    <string name="weather">Weather</string>
</resources>