<?xml version="1.0" encoding="utf-8"?>
<merge android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/mapbox_search_sdk_ic_error" app:tint="?mapboxSearchSdkErrorIconColor" />
    <TextView android:textAppearance="@style/MapboxSearchSdk.Text.BoldHeader.Big" android:id="@id/error_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mapbox_search_sdk_dimen_3x" android:text="@string/mapbox_search_sdk_no_internet_connection_title" />
    <TextView android:textAppearance="@style/MapboxSearchSdk.Text.Secondary" android:id="@id/error_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mapbox_search_sdk_no_internet_connection_subtitle" />
    <Button android:id="@id/retry_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mapbox_search_sdk_dimen_8x" android:text="@string/mapbox_search_sdk_no_internet_connection_retry_button" style="@style/MapboxSearchSdk.Button.Primary.Small" />
</merge>
