<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingTop="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fahrenheit" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/unitSystemSwitch" app:layout_constraintEnd_toStartOf="@id/unitSystemSwitch" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/unitSystemSwitch" />
    <ImageView android:id="@id/imageView2" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toStartOf="@id/textView" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/partly_cloudy" />
    <TextView android:textSize="30.0sp" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weather" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="@id/imageView2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/imageView2" app:layout_constraintTop_toTopOf="@id/imageView2" />
    <TextView android:textSize="12.0sp" android:gravity="center_horizontal" android:id="@id/textView6" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/shortcut_tip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/unitSystemSwitch" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:id="@id/btnSearchLocation" android:background="@drawable/background_selector" android:padding="4.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/search_new_location" android:focusedByDefault="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/selected_location" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:id="@id/btnForceLocationUpdate" android:background="@drawable/background_selector" android:padding="4.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/location_update" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnSearchLocation" />
    <androidx.appcompat.widget.SwitchCompat android:id="@id/unitSystemSwitch" android:background="@drawable/background_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:layout_constraintEnd_toStartOf="@id/textView8" app:layout_constraintStart_toEndOf="@id/textView9" app:layout_constraintTop_toBottomOf="@id/btnForceLocationUpdate" />
    <TextView android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/celsius" android:layout_marginStart="4.0dip" app:layout_constraintBottom_toBottomOf="@id/unitSystemSwitch" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/unitSystemSwitch" app:layout_constraintTop_toTopOf="@id/unitSystemSwitch" />
    <TextView android:id="@id/selected_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/loading" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>
