<?xml version="1.0" encoding="utf-8"?>
<com.basicphones.weather.ui.fragments.layout.FocusFixConstraintLayout android:background="@drawable/background_selector" android:paddingTop="8.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" app:layout_constraintBottom_toTopOf="@id/divider2">
        <TextView android:textSize="14.0sp" android:gravity="end" android:id="@id/txtTime" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/default_hour" android:maxLines="1" android:autoSizeTextType="uniform" android:layout_marginHorizontal="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/hourlyIconWeather" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/hourlyIconWeather" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:contentDescription="@string/icon_for_hourly_weather" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/info" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_na" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="48.0dip" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.45" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView android:id="@id/txtTemp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_temp" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/droplet3" android:layout_width="16.0dip" android:layout_height="16.0dip" android:contentDescription="@string/droplet_image_desc" app:srcCompat="@drawable/drop" />
                <TextView android:gravity="start" android:id="@id/txtPrecip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_precip" android:autoSizeTextType="uniform" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="14.0sp" android:textColor="@color/colorWhite" android:id="@id/txtSummary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/default_temp_summary" android:maxLines="2" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" android:autoSizeTextType="uniform" app:layout_constraintBottom_toTopOf="@id/txtWindSpeed" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toEndOf="@id/info" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="14.0sp" android:gravity="center_vertical" android:id="@id/txtWindSpeed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_temp_summary" android:maxLines="2" android:drawablePadding="4.0dip" android:layout_marginEnd="4.0dip" android:autoSizeTextType="uniform" app:drawableEndCompat="@drawable/ic_wind" app:drawableTint="@color/colorWhite" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/windDirection" app:layout_constraintTop_toBottomOf="@id/txtSummary" />
        <ImageView android:id="@id/windDirection" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_direction_s" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/txtWindSpeed" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="@id/txtWindSpeed" app:tint="@color/colorWhite" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:id="@id/divider2" android:background="@color/colorPrimary" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</com.basicphones.weather.ui.fragments.layout.FocusFixConstraintLayout>
