<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/colorBackground" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/alert_title_text_size" android:textColor="@color/colorAlert" android:id="@id/alert_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/alerts_title" android:scrollHorizontally="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/alert_text_size" android:textColor="@color/colorWhite" android:id="@id/alert_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alert_description" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/alert_title" />
    <TextView android:textSize="@dimen/alert_text_size" android:id="@id/alert_description_content" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/alert_description" android:layout_marginStart="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/alert_description" />
    <TextView android:textSize="@dimen/alert_text_size" android:textColor="@color/colorWhite" android:id="@id/alert_certainty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/alert_certainty" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/alert_description_content" />
    <TextView android:textSize="@dimen/alert_text_size" android:id="@id/alert_certainty_content" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/alert_certainty" android:layout_marginStart="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/alert_certainty" />
    <TextView android:textSize="@dimen/alert_text_size" android:textColor="@color/colorWhite" android:id="@id/alert_instruction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/alert_instruction" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/alert_certainty_content" />
    <TextView android:textSize="@dimen/alert_text_size" android:id="@id/alert_instruction_content" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/alert_instruction" android:layout_marginStart="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/alert_instruction" />
    <View android:background="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="8.0dip" app:layout_constraintTop_toBottomOf="@id/alert_instruction_content" />
</androidx.constraintlayout.widget.ConstraintLayout>
