<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText android:textSize="16.0sp" android:typeface="sans" android:textColor="@color/colorWhite" android:textColorHint="@color/mapbox_plugins_light_navy" android:textColorLink="@color/colorWhite" android:id="@id/edittext_search" android:background="@null" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="0.0dip" android:hint="@string/mapbox_plugins_autocomplete_search_hint" android:cursorVisible="true" android:ems="10" android:singleLine="true" android:inputType="textNoSuggestions" android:imeOptions="actionSearch|flagNoExtractUi" android:textCursorDrawable="@drawable/mapbox_color_text_cursor" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/button_search_clear" app:layout_constraintStart_toEndOf="@id/button_search_back" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/button_search_clear" android:background="@android:color/transparent" android:focusable="true" android:visibility="invisible" android:layout_width="40.0dip" android:layout_height="40.0dip" android:scaleType="center" android:contentDescription="@string/mapbox_plugins_cd_search_clear_button" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0" app:srcCompat="@drawable/mapbox_ic_clear" app:tint="@color/colorWhite" />
    <ImageView android:id="@id/button_search_back" android:background="@android:color/transparent" android:focusable="true" android:layout_width="40.0dip" android:layout_height="40.0dip" android:scaleType="center" android:contentDescription="@string/mapbox_plugins_cd_search_back_button" android:paddingStart="0.0dip" android:paddingEnd="20.0dip" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/mapbox_ic_arrow_back" app:tint="@color/colorWhite" />
</androidx.constraintlayout.widget.ConstraintLayout>
